# bioMed

./: .gitignore  BioMed_blog.md  README.md  __init__.py  client.py  hf_biomed_job.py  models.py  openenv.yaml  pyproject.toml  requirements-hf-train.txt  requirements-unsloth.txt  training_biomed.ipynb
.github/workflows/: ci.yml
bioMed/: __init__.py
biomed_models/: __init__.py  actions.py  artifacts.py  contract.py  observation.py  predicates.py  public_payloads.py  reward.py  semantics.py  state.py
common/: __init__.py  benchmark_contract.py  terminal_labels.py
models/: action_params.py  artifacts.py  contract.py  observation.py  semantics.py  state.py
server/: Dockerfile  __init__.py  app.py  bioMed_environment.py  scenarios.py  ui_api.py
server/rewards/: __init__.py  reward.py  reward_config.py  reward_types.py  shaping.py  step_reward.py  terminal_reward.py
server/rules/: __init__.py  engine.py  types.py
server/simulator/: __init__.py  latent_models.py  latent_state.py  observation_builder.py  scenarios.py  transition.py
server/tasks/: scenarios.py
server/ui/: __init__.py  recorder.py  serializers.py  store.py
tests/: conftest.py  test_rules_engine.py
tests/api/: test_client_server_contract.py  test_http_contract.py  test_openenv_concurrency.py  test_openenv_invalid_requests.py  test_openenv_reset_step_state.py  test_openenv_schema.py  test_openenv_websocket_isolation.py  test_ui_cockpit.py
tests/contract/: test_action_registry.py  test_metric_schema.py  test_no_forbidden_public_keys.py  (+3 more)
training/: __init__.py  action_registry.py  agent_runner.py  baselines.py  evaluate_policy.py  evaluation.py  parsing.py  replay.py  rollout_collection.py  tool_env.py  trainer_script.py  training_log.txt  training_unsloth.py  trajectory.py
(+49 files in other folders)
